Change z-index to avoid clash with menu dropdown

--- a/bs5/sass/components/_carousel.scss
+++ b/bs5/sass/components/_carousel.scss
@@ -54,7 +54,7 @@
     position: absolute;
     bottom: -4rem;
     left: 50%;
-    z-index: 15;
+    z-index: 0;
     width: 60%;
     padding-left: 0;
     margin-left: -30%;
